--- a/package.json
+++ b/package.json
@@ -35,13 +35,21 @@
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
+    "@ngrx/effects": "6.1.0",
+    "@ngrx/entity": "6.1.0",
+    "@ngrx/router-store": "6.1.0",
+    "@ngrx/store": "6.1.0",
+    "@nrwl/nx": "7.0.2",
+    "apollo-angular": "^1.5.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.26",
-    "@nrwl/nx": "7.0.2",
-    "@ngrx/effects": "6.1.0",
-    "@ngrx/router-store": "6.1.0",
-    "@ngrx/store": "6.1.0"
+    "apollo-angular-link-http": "^1.3.1",
+    "apollo-link": "^1.2.0",
+    "apollo-client": "^2.4.0",
+    "apollo-cache-inmemory": "^1.3.2",
+    "graphql-tag": "^2.10.0",
+    "graphql": "^0.13.2"
   },
   "devDependencies": {
     "@angular/cli": "7.0.1",
